--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -15,7 +15,7 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOROC ON)
 set(CMAKE_AUTOUIC_ON)
 
-find_package(Qt5 COMPONENTS Widgets Core Gui REQUIRED)
+find_package(Qt5 COMPONENTS Widgets Core Gui UiTools REQUIRED)
 
 qt5_add_resources(QRcs ${EngineSrcDir}/resources.qrc)
 
@@ -133,7 +133,7 @@ set_target_properties(Engine PROPERTIES
     LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR_BINARY})
 
 target_link_libraries(Engine PUBLIC
-    Qt5::Widgets Qt5::Core Qt5::Gui
+    Qt5::Widgets Qt5::Core Qt5::Gui Qt5::UiTools
     assimp Bullet3Common BulletSoftBody Bullet3Dynamics
     Bullet3Collision LinearMath Bullet3Geometry
     BulletDynamics BulletCollision)
